# ParkingManagementSystem_cProject

./: .gitignore  CMakeLists.txt  main.cpp
core/include/: Event.h  GUI.h  config.h  dataFormat.h  fileIO.h
core/src/: Event.cpp  GUI.cpp  fileIO.cpp
